[gd_scene load_steps=2 format=3 uid="uid://o4tkm5tqgclo"]

[ext_resource type="Script" uid="uid://bb3j03870jhi4" path="res://Princ.gd" id="1_57eqq"]

[node name="Speedrun" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_57eqq")

[node name="Temp_Chat" type="Timer" parent="."]
autostart = true

[node name="CajaCamaraYSegmentos" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 188.0
grow_vertical = 2

[node name="CajaTwichChat" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_right = 18.0
grow_horizontal = 0
grow_vertical = 2

[node name="SC" type="ScrollContainer" parent="CajaTwichChat"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
follow_focus = true

[node name="TwichChat" type="RichTextLabel" parent="CajaTwichChat/SC"]
custom_minimum_size = Vector2(410, 300)
layout_mode = 2
bbcode_enabled = true
scroll_following = true
autowrap_mode = 2
vertical_alignment = 2

[connection signal="timeout" from="Temp_Chat" to="." method="EnviarChat"]
